Fixed batch generator, bugfixes to DataExchange